--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -4,53 +4,64 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Líder Técnico</h3>
-                            <div class="time">2016 - Presente</div>
-                        </div><!--//upper-row-->
+                            <h3 class="job-title">Jefe de área</h3>
+                            <div class="time">2016 - 2019</div>
+                        </div>
                         <div class="company">TSYS México, Toluca Edo. de México, México.</div>
-                    </div><!--//meta-->
+                    </div>
                     <div class="details">
-                        <p>Tecnologias aplicadas: Git, Apache JMeter, Selenium, SonarQube, Jenkins, y Acunetix</p>
-                    </div><!--//details-->
-                </div><!--//item-->
+                        <p>Análisis de requerimientos.</p>
+                        <p>Diseño y arquitectura de las soluciones.</p>
+                        <p>Asignación y supervisión de tareas a un equipo de desarrollo.</p>
+                        <p>Desarrollo del sistema 'Hermes' distribución de sms y e-mail mediante un pool de proveedores y SMTP.</p>
+                        <p>Desarrollo del sistema 'E-PIN' entrega de NIPs mediante canales seguros (doble autenticación)</p>
+                        <p>Tecnologías aplicadas: GIT, Apache JMeter, Selenium, Acunetix, JUnit, SonarQube</p>
+                    </div>                    
+                </div>
 
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Programador - Java Sr (especialista CFDI v3.2)</h3>
                             <div class="time">2013 - 2016</div>
-                        </div><!--//upper-row-->
+                        </div>
                         <div class="company">TSYS México, Toluca Edo. de México, México.</div>
-                    </div><!--//meta-->
+                    </div>
                     <div class="details">
-                        <p>Tecnologias aplicadas: Java 6, Java7, Spring Framework, Spring-Boot, Spring-Data JPA, Spring-Security, Spring-MVC, Web Services, SOAP/REST, Angularjs, Angular Material, Akka, Oracle SQL</p>
-                    </div><!--//details-->
-                </div><!--//item-->
+                        <p>Desarrollo del motor de timbrado para CFDI versión 3.2, generación de timbres mediante HSM, validación de XMLs, entrega al SAT mediante servicios SOAP.</p>
+                        <p>Desarrollo del sistema 'Digital Data Delivery' recepción y resguardos de recursos digitales (EDC, BD, PDF, XMLs, etc), disposición de los mismos mediante servicios REST.</p>
+                        <p>Tecnologías aplicadas: Java, Spring Framework (MVC, Security, DataJPA), Servicios REST, HTML5, AngularJS, Angular Material, Subversión, Apache Maven, Akka, Oracle SQL.</p>
+                    </div>
+                </div>
 
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Programador - Java Sr</h3>
+                            <h3 class="job-title">Programador - Java Jr</h3>
                             <div class="time">2011 - 2013</div>
-                        </div><!--//upper-row-->
+                        </div>
                         <div class="company">AdeA México, Toluca Edo. de México, México.</div>
-                    </div><!--//meta-->
+                    </div>
                     <div class="details">
-                        <p>Tecnologias aplicadas: Java 5, Spring Framework, JSF2, Primefaces,  Hibernate, Oracle SQL</p>
-                    </div><!--//details-->
-                </div><!--//item-->
+                        <p>Desarrollo del sistema 'Gestión Documental' para Vitamedica</p>
+                        <p>Desarrollo del sistema 'Expediente Único' para Bancomer</p>
+                        <p>Tecnologías aplicadas: Java, JSF, Primefaces, Spring Framework, Hibernate, Oracle SQL.</p>
+                    </div>
+                </div>
 
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Programador - Java Jr</h3>
                             <div class="time">2009 - 2010</div>
-                        </div><!--//upper-row-->
+                        </div>
                         <div class="company">DSI Software, Toluca Edo. de México, México.</div>
-                    </div><!--//meta-->
+                    </div>
                     <div class="details">
-                        <p>Tecnologias aplicadas: Java 4 y MySQL SQL</p>
-                    </div><!--//details-->
-                </div><!--//item-->
+                        <p>Desarrollo del Sistema Integral para Escuelas Normales del Estado de México.</p>
+                        <p>Desarrollo del Sistema de gestión para Verificentros del Estado de México.</p>
+                        <p>Tecnologías aplicadas: Java, JSP, Servlets, HTML, CSS, JavaScript, MySQL</p>
+                    </div>
+                </div>
 
-            </section><!--//section-->
+            </section>
