--- a/_includes/language.html
+++ b/_includes/language.html
@@ -1,7 +1,7 @@
 <div class="languages-container container-block">
-<h2 class="container-block-title">Lenguajes</h2>
-<ul class="list-unstyled interests-list">
-<li>Español <span class="lang-desc">(Nativo)</span></li>
-<li>English <span class="lang-desc">(A2 Elemental)</span></li>
-</ul>
-</div><!--//interests-->
+    <h2 class="container-block-title">Idiomas</h2>
+    <ul class="list-unstyled interests-list">
+        <li>Español <span class="lang-desc">(Nativo)</span></li>
+        <li>English <span class="lang-desc">(B2 Elemental)</span></li>
+    </ul>
+</div>
