--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,18 +1,10 @@
 <section class="section projects-section">
-                <h2 class="section-title"><i class="fa fa-archive"></i>Proyectos</h2>
-                <div class="intro">
-                    <p></p>
-                </div>
-                <div class="item">
-                    <span class="project-title"><a href="https://github.com/jviera/garrobo">Garrobo Security</a></span> - <span class="project-tagline">En desarrollo...</span>
-                </div>
-                <div class="item">
-                    <span class="project-title"><a href="https://github.com/jviera/garrobo">Garrobo Services</a></span> - <span class="project-tagline">En desarrollo...</span>
-                </div>
-                <div class="item">
-                    <span class="project-title"><a href="https://github.com/jviera/garrobo">Garrobo Web</a></span> - <span class="project-tagline">En desarrollo...</span>
-                </div>
-                <div class="item">
-                    <span class="project-title"><a href="https://github.com/jviera/garrobo">Garrobo movil</a></span> - <span class="project-tagline">En desarrollo...</span>
-                </div>
+    <h2 class="section-title"><i class="fa fa-archive"></i>Proyectos</h2>
+    <div class="intro">
+        <p></p>
+    </div>
+    <div class="item">
+        <span class="project-title"><a href="https://garrobo-software.github.io">Garrobo</a></span> - <span
+            class="project-tagline">En desarrollo...</span>
+    </div>
 </section>
