--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -3,92 +3,100 @@
                 <div class="skillset">
 
                     <div class="item">
-                        <h3 class="level-title">CI/CD &amp; Jenkins </h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">TDD &amp; Junit</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">GIT</h3>
+                        <h3 class="level-title">Java</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="95%">
                             </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
+                        </div>
+                    </div>
 
                     <div class="item">
-                        <h3 class="level-title">Messaging &amp; RabbitMQ</h3>
+                        <h3 class="level-title">Java Server Faces &amp; Primefaces &amp; Richfaces</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="90%">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <h3 class="level-title">Spring Framework &amp; CORE &amp; MVC &amp; Security &amp; Data JPA</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="85%">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <h3 class="level-title">Web Services &amp; SOAP &amp; REST</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="85%">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <h3 class="level-title">HTML</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="90%">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <h3 class="level-title">CSS3</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="85%">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <h3 class="level-title">Bootstrap</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="80%">
                             </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
+                        </div>
+                    </div>
 
                     <div class="item">
-                        <h3 class="level-title">SonarQube</h3>
+                        <h3 class="level-title">JavaScript</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
+                            <div class="level-bar-inner" data-level="75%">
                             </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
+                        </div>
+                    </div>
 
                     <div class="item">
-                        <h3 class="level-title">Apache JMeter</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">PrimeFaces &amp; RichFaces</h3>
+                        <h3 class="level-title">SQL</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="90%">
                             </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
+                        </div>
+                    </div>
 
-                    <div class="item">
-                        <h3 class="level-title">Web Services - SOAP &amp; REST</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-
-                    <div class="item">
-                        <h3 class="level-title">Spring Framework &amp; MVC &amp; Security &amp; DataJPA &amp; Batch</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->                   
-                  
-                    <div class="item">
-                        <h3 class="level-title">Akka</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="70%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
-                   
                     <div class="item">
                         <h3 class="level-title">Apache Maven</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
+                            <div class="level-bar-inner" data-level="90%">
                             </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
+                        </div>
+                    </div>
 
+                    <div class="item">
+                        <h3 class="level-title">Subversión &amp; GIT</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="90%">
+                            </div>
+                        </div>
+                    </div>                   
+
+                    <div class="item">
+                        <h3 class="level-title">Akka</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="75%">
+                            </div>
+                        </div>
+                    </div>    
+                  
                 </div>
-            </section><!--//skills-section-->
+            </section>
