--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -10,12 +10,14 @@
                         <div class="company">TSYS México, Toluca Edo. de México, México.</div>
                     </div>
                     <div class="details">
-                        <p>Análisis de requerimientos.</p>
-                        <p>Diseño y arquitectura de las soluciones.</p>
-                        <p>Asignación y supervisión de tareas a un equipo de desarrollo.</p>
-                        <p>Desarrollo del sistema 'Hermes' distribución de sms y e-mail mediante un pool de proveedores y SMTP.</p>
-                        <p>Desarrollo del sistema 'E-PIN' entrega de NIPs mediante canales seguros (doble autenticación)</p>
-                        <p>Tecnologías aplicadas: GIT, Apache JMeter, Selenium, Acunetix, JUnit, SonarQube</p>
+                        <p>
+                            Análisis de requerimientos.<br>
+                            Diseño y arquitectura de las soluciones.<br>
+                            Asignación y supervisión de tareas a un equipo de desarrollo.<br>
+                            Desarrollo del sistema 'Hermes' distribución de sms y e-mail mediante un pool de proveedores y SMTP.<br>
+                            Desarrollo del sistema 'E-PIN' entrega de NIPs mediante canales seguros (doble autenticación)<br>
+                            Tecnologías aplicadas: GIT, Apache JMeter, Selenium, Acunetix, JUnit, SonarQube
+                        </p>
                     </div>                    
                 </div>
 
