--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -11,12 +11,12 @@
                     </div>
                     <div class="details">
                         <p>
-                            Análisis de requerimientos.<br>
-                            Diseño y arquitectura de las soluciones.<br>
-                            Asignación y supervisión de tareas a un equipo de desarrollo.<br>
-                            Desarrollo del sistema 'Hermes' distribución de sms y e-mail mediante un pool de proveedores y SMTP.<br>
-                            Desarrollo del sistema 'E-PIN' entrega de NIPs mediante canales seguros (doble autenticación)<br>
-                            Tecnologías aplicadas: GIT, Apache JMeter, Selenium, Acunetix, JUnit, SonarQube
+                            * Análisis de requerimientos.<br>
+                            * Diseño y arquitectura de las soluciones.<br>
+                            * Asignación y supervisión de tareas a un equipo de desarrollo.<br>
+                            * Desarrollo del sistema 'Hermes' distribución de sms y e-mail mediante un pool de proveedores y SMTP.<br>
+                            * Desarrollo del sistema 'E-PIN' entrega de NIPs mediante canales seguros (doble autenticación)<br>
+                            * Tecnologías aplicadas: GIT, Apache JMeter, Selenium, Acunetix, JUnit, SonarQube
                         </p>
                     </div>                    
                 </div>
@@ -30,9 +30,11 @@
                         <div class="company">TSYS México, Toluca Edo. de México, México.</div>
                     </div>
                     <div class="details">
-                        <p>Desarrollo del motor de timbrado para CFDI versión 3.2, generación de timbres mediante HSM, validación de XMLs, entrega al SAT mediante servicios SOAP.</p>
-                        <p>Desarrollo del sistema 'Digital Data Delivery' recepción y resguardos de recursos digitales (EDC, BD, PDF, XMLs, etc), disposición de los mismos mediante servicios REST.</p>
-                        <p>Tecnologías aplicadas: Java, Spring Framework (MVC, Security, DataJPA), Servicios REST, HTML5, AngularJS, Angular Material, Subversión, Apache Maven, Akka, Oracle SQL.</p>
+                        <p>
+                            - Desarrollo del motor de timbrado para CFDI versión 3.2, generación de timbres mediante HSM, validación de XMLs, entrega al SAT mediante servicios SOAP.<br>
+                            - Desarrollo del sistema 'Digital Data Delivery' recepción y resguardos de recursos digitales (EDC, BD, PDF, XMLs, etc), disposición de los mismos mediante servicios REST.<br>
+                            - Tecnologías aplicadas: Java, Spring Framework (MVC, Security, DataJPA), Servicios REST, HTML5, AngularJS, Angular Material, Subversión, Apache Maven, Akka, Oracle SQL<br>
+                        </p>
                     </div>
                 </div>
 
