--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,71 +1,85 @@
 <section class="section experiences-section">
-                <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiencia profesional</h2>
+    <h2 class="section-title"><i class="fa fa-briefcase"></i>Experiencia profesional</h2>
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Jefe de área</h3>
-                            <div class="time">2016 - 2019</div>
-                        </div>
-                        <div class="company">TSYS México, Toluca Edo. de México, México.</div>
-                    </div>
-                    <div class="details">
-                        <p>
-                            * Análisis de requerimientos.<br>
-                            * Diseño y arquitectura de las soluciones.<br>
-                            * Asignación y supervisión de tareas a un equipo de desarrollo.<br>
-                            * Desarrollo del sistema 'Hermes' distribución de sms y e-mail mediante un pool de proveedores y SMTP.<br>
-                            * Desarrollo del sistema 'E-PIN' entrega de NIPs mediante canales seguros (doble autenticación)<br>
-                            * Tecnologías aplicadas: GIT, Apache JMeter, Selenium, Acunetix, JUnit, SonarQube
-                        </p>
-                    </div>                    
-                </div>
+    <div class="item">
+        <div class="meta">
+            <div class="upper-row">
+                <h3 class="job-title">Jefe de área</h3>
+                <div class="time">2016 - 2019</div>
+            </div>
+            <div class="company">TSYS México, Toluca Edo. de México, México.</div>
+        </div>
+        <div class="details">
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Programador - Java Sr (especialista CFDI v3.2)</h3>
-                            <div class="time">2013 - 2016</div>
-                        </div>
-                        <div class="company">TSYS México, Toluca Edo. de México, México.</div>
-                    </div>
-                    <div class="details">
-                        <p>
-                            - Desarrollo del motor de timbrado para CFDI versión 3.2, generación de timbres mediante HSM, validación de XMLs, entrega al SAT mediante servicios SOAP.<br>
-                            - Desarrollo del sistema 'Digital Data Delivery' recepción y resguardos de recursos digitales (EDC, BD, PDF, XMLs, etc), disposición de los mismos mediante servicios REST.<br>
-                            - Tecnologías aplicadas: Java, Spring Framework (MVC, Security, DataJPA), Servicios REST, HTML5, AngularJS, Angular Material, Subversión, Apache Maven, Akka, Oracle SQL<br>
-                        </p>
-                    </div>
-                </div>
+            <ul style="list-style-type:square;">
+                <li>Análisis de requerimientos.</li>
+                <li>Diseño y arquitectura de las soluciones.</li>
+                <li>Asignación y supervisión de tareas a un equipo de desarrollo.</li>
+                <li>Desarrollo del sistema 'Hermes' distribución de sms y e-mail mediante un pool de proveedores y
+                    SMTP.</li>
+                <li>Desarrollo del sistema 'E-PIN' entrega de NIPs mediante canales seguros (doble autenticación)</li>
+                <li>Tecnologías aplicadas:
+                    <ul>
+                      <li>GIT</li>
+                      <li>Apache JMeter</li>
+                      <li>Selenium</li>
+                      <li>Acunetix</li>
+                      <li>JUnit</li>
+                      <li>SonarQube</li>                      
+                    </ul>
+                  </li>
+            </ul>
+        </div>
+    </div>
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Programador - Java Jr</h3>
-                            <div class="time">2011 - 2013</div>
-                        </div>
-                        <div class="company">AdeA México, Toluca Edo. de México, México.</div>
-                    </div>
-                    <div class="details">
-                        <p>Desarrollo del sistema 'Gestión Documental' para Vitamedica</p>
-                        <p>Desarrollo del sistema 'Expediente Único' para Bancomer</p>
-                        <p>Tecnologías aplicadas: Java, JSF, Primefaces, Spring Framework, Hibernate, Oracle SQL.</p>
-                    </div>
-                </div>
+    <div class="item">
+        <div class="meta">
+            <div class="upper-row">
+                <h3 class="job-title">Programador - Java Sr (especialista CFDI v3.2)</h3>
+                <div class="time">2013 - 2016</div>
+            </div>
+            <div class="company">TSYS México, Toluca Edo. de México, México.</div>
+        </div>
+        <div class="details">
+            <p>
+                - Desarrollo del motor de timbrado para CFDI versión 3.2, generación de timbres mediante HSM, validación
+                de XMLs, entrega al SAT mediante servicios SOAP.<br>
+                - Desarrollo del sistema 'Digital Data Delivery' recepción y resguardos de recursos digitales (EDC, BD,
+                PDF, XMLs, etc), disposición de los mismos mediante servicios REST.<br>
+                - Tecnologías aplicadas: Java, Spring Framework (MVC, Security, DataJPA), Servicios REST, HTML5,
+                AngularJS, Angular Material, Subversión, Apache Maven, Akka, Oracle SQL<br>
+            </p>
+        </div>
+    </div>
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Programador - Java Jr</h3>
-                            <div class="time">2009 - 2010</div>
-                        </div>
-                        <div class="company">DSI Software, Toluca Edo. de México, México.</div>
-                    </div>
-                    <div class="details">
-                        <p>Desarrollo del Sistema Integral para Escuelas Normales del Estado de México.</p>
-                        <p>Desarrollo del Sistema de gestión para Verificentros del Estado de México.</p>
-                        <p>Tecnologías aplicadas: Java, JSP, Servlets, HTML, CSS, JavaScript, MySQL</p>
-                    </div>
-                </div>
+    <div class="item">
+        <div class="meta">
+            <div class="upper-row">
+                <h3 class="job-title">Programador - Java Jr</h3>
+                <div class="time">2011 - 2013</div>
+            </div>
+            <div class="company">AdeA México, Toluca Edo. de México, México.</div>
+        </div>
+        <div class="details">
+            <p>Desarrollo del sistema 'Gestión Documental' para Vitamedica</p>
+            <p>Desarrollo del sistema 'Expediente Único' para Bancomer</p>
+            <p>Tecnologías aplicadas: Java, JSF, Primefaces, Spring Framework, Hibernate, Oracle SQL.</p>
+        </div>
+    </div>
 
-            </section>
+    <div class="item">
+        <div class="meta">
+            <div class="upper-row">
+                <h3 class="job-title">Programador - Java Jr</h3>
+                <div class="time">2009 - 2010</div>
+            </div>
+            <div class="company">DSI Software, Toluca Edo. de México, México.</div>
+        </div>
+        <div class="details">
+            <p>Desarrollo del Sistema Integral para Escuelas Normales del Estado de México.</p>
+            <p>Desarrollo del Sistema de gestión para Verificentros del Estado de México.</p>
+            <p>Tecnologías aplicadas: Java, JSP, Servlets, HTML, CSS, JavaScript, MySQL</p>
+        </div>
+    </div>
+
+</section>
