--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -1,6 +1,6 @@
 <section class="section summary-section">
     <h2 class="section-title"><i class="fa fa-user"></i>Sobre mi</h2>
     <div class="summary">
-        <p>Apasionado de la tecnología, autodidacta, interesado especialmente en encontrar mejores formas de desarrollar software para mejorar la productividad.</p>        
+        <p>Autodidacta, pragmático, apasionado de la tecnología especialmente interesado en el desarrollo de Software.</p>        
     </div>
 </section>
