--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -12,7 +12,8 @@
         <div class="details">
             <ul style="list-style-type:square;">
                 <li>Análisis de requerimientos.</li>
-                <li>Diseño y arquitectura de las soluciones.</li>
+                <li>Diseño de esquemas de Base de Datos.</li>
+                <li>Arquitectura de soluciones.</li>
                 <li>Asignación y supervisión de tareas a un equipo de desarrollo.</li>
                 <li>Desarrollo del sistema 'Hermes' distribución de sms y e-mail mediante un pool de proveedores y
                     SMTP.</li>
