--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,8 +1,8 @@
 <div class="interests-container container-block">
     <h2 class="container-block-title">Intereses</h2>
     <ul class="list-unstyled interests-list">
-        <li>Metodología</li>
-        <li>CI/CD</li>
+        <li>Metodologías de desarrollo</li>
+        <li>CI/CD (productividad)</li>
         <li>Aplicaciones móviles</li>
         <li>Progressive Web Apps</li>
     </ul>
