--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,11 @@
         <p></p>
     </div>
     <div class="item">
-        <span class="project-title"><a href="https://jviera.github.io">Blog</a></span> - <span class="project-tagline">Blog donde escribo sobre temas relacionados al desarrollo de Software.</span>
-        <span class="project-title"><a href="https://github.com/jviera/garrobo-security">Garrobo Security</a></span> - <span class="project-tagline">Esquema de segurida para gestionar usuarios, roles y privilegios.</span>
+        <span class="project-title"><a href="https://jviera.github.io">Blog personal</a></span> - <span
+            class="project-tagline">Blog donde escribo sobre temas relacionados al desarrollo de Software.</span>
+    </div>
+    <div class="item">
+        <span class="project-title"><a href="https://github.com/jviera/garrobo-security">Garrobo Security</a></span> -
+        <span class="project-tagline">Esquema de segurida para gestionar usuarios, roles y privilegios.</span>
     </div>
 </section>
