--- a/_includes/language.html
+++ b/_includes/language.html
@@ -2,6 +2,6 @@
     <h2 class="container-block-title">Idiomas</h2>
     <ul class="list-unstyled interests-list">
         <li>Español <span class="lang-desc">(Nativo)</span></li>
-        <li>English <span class="lang-desc">(B2 Elemental)</span></li>
+        <li>English <span class="lang-desc"></span></li>
     </ul>
 </div>
